Prevent virtual input devices from blocking tablet mode

Let only physical input devices block the tablet mode. If more input
devices need to block the tablet mode, we can look into adding generic
tags in the InputDevice.

BUG: 500025


(cherry picked from commit 72c841e743487fbbe14f6ee7267ef739db442f41)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>